# myml

./: .gitignore  ChangeLog.md  LICENSE  README.md  cabal.project.freeze  default.nix  derivation.nix  hie.yaml  myml.cabal  package.yaml  stack.yaml
.github/workflows/: build.yml  main.yml  spec.yml
app/: Main.hs
example/: class.myml  counter.myml  fix.myml  pure_counter.myml  simple.myml
examples/: class.myml  counter.myml  hello_world.myml  list.myml  nat.myml  polymorphic_variant.myml  pure_counter.myml  return_self.myml
mymli/: Main.hs
mymli/Myml/: Mymli.hs
mymli/Myml/Mymli/: Command.hs  Common.hs  Environment.hs  Input.hs  Lang.hs  Option.hs  Output.hs  Parser.hs  Text.hs
mymli/Myml/Mymli/Command/: Parser.hs
mymli/Myml/Mymli/Input/: Parser.hs
spec/: specification.tex
specification/: .gitignore  specification.tex
src/Myml/: Eval.hs  Parser.hs  Print.hs  Subst.hs  Syntax.hs  Typing.hs
src/Myml/Eval/: Store.hs
src/Myml/Lang/: Parser.hs  Syntax.hs
src/Myml/Parser/: Common.hs  Helper.hs  Style.hs
src/Myml/Type.hs/: Check.hs
stdlib/: apply.myml  bool.myml  char.myml  function.myml  integer.myml  io.myml  list.myml  maybe.myml  ordering.myml  ski.myml  stack.myml  std.myml  string.myml
test/: Spec.hs
test/Myml/Eval/: Spec.hs
test/Myml/Eval/Store/: Spec.hs
test/Myml/Parser/: Spec.hs
test/Myml/Subst/: Spec.hs
test/Myml/Syntax/: Spec.hs
test/Myml/Test/: Helper.hs
test/Myml/Typing/: Spec.hs
tests/: Spec.hs
tests/Myml/Eval/: Spec.hs
tests/Myml/Eval/Store/: Spec.hs
tests/Myml/Parser/: Spec.hs
tests/Myml/Subst/: Spec.hs
tests/Myml/Syntax/: Spec.hs
tests/Myml/Test/: Helper.hs
tests/Myml/Typing/: Spec.hs
tools/: check-format  format  hlint  prepare  refreeze  test-all  test-sources  update-resolver
