cabal-version: 3.0

name:           myml
version:        0.0.1
synopsis:       My toy programming language(WIP).
description:    Please see the README on GitHub at <https://github.com/linyinfeng/myml#readme>
category:       Language
homepage:       https://github.com/linyinfeng/myml#readme
bug-reports:    https://github.com/linyinfeng/myml/issues
author:         Lin Yinfeng
maintainer:     lin.yinfeng@outlook.com
copyright:      (c) Lin Yinfeng
license:        MIT
license-file:   LICENSE
build-type:     Simple
stability:      alpha
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/linyinfeng/myml

common haskell
  default-language: Haskell2010
  ghc-options: -Wall

common dependencies
  build-depends:
      base
    , containers
    , equivalence
    , mtl
    , transformers
    , parsers
    , prettyprinter
    , smallcheck
    , trifecta
    , unordered-containers
    , recursion-schemes

common executable-flags
  ghc-options: -threaded -rtsopts -with-rtsopts=-N

library
  import:
      haskell
    , dependencies
  exposed-modules:
      Myml.Eval
      Myml.Eval.Store
      Myml.Parser
      Myml.Parser.Common
      Myml.Parser.Style
      Myml.Parser.Helper
      Myml.Subst
      Myml.Syntax
      Myml.Typing
      Myml.Lang.Syntax
      Myml.Lang.Parser
  other-modules:
      Paths_myml
  hs-source-dirs:
      src

executable mymli
  import:
      haskell
    , dependencies
    , executable-flags
  main-is: Main.hs
  other-modules:
      Myml.Mymli
      Myml.Mymli.Common
      Myml.Mymli.Environment
      Myml.Mymli.Command
      Myml.Mymli.Command.Parser
      Myml.Mymli.Lang
      Myml.Mymli.Option
      Myml.Mymli.Output
      Myml.Mymli.Input
      Myml.Mymli.Text
      Paths_myml
  hs-source-dirs:
      mymli
  build-depends:
      myml
    , ansi-terminal
    , directory
    , filepath
    , haskeline
    , text
    , neat-interpolation
    , optparse-applicative

test-suite myml-test
  import:
      haskell
    , dependencies
    , executable-flags
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Myml.Eval.Spec
      Myml.Eval.Store.Spec
      Myml.Parser.Spec
      Myml.Subst.Spec
      Myml.Syntax.Spec
      Myml.Test.Helper
      Myml.Typing.Spec
      Paths_myml
  hs-source-dirs:
      tests
  build-depends:
    , myml
    , tasty
    , tasty-hunit
    , tasty-smallcheck
